# trading-daemon

./: .cursorrules  .gitignore  README.md  app_config.json  debug_gemini.py  debug_output.html  debug_output2.html  pyproject.toml  requirements.txt  test_gemini_mcp.py  test_gemini_simple.py
prompts/: system-prompt.md  user-prompt-alt.md  user-prompt.md
src/: config.py  gemini_client.py  inference.py  main.py  market.py  models.py  state.py  trade_manager.py  triggers.py  web_server.py
src/trading_daemon.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_basic.py  test_inference.py  test_rules_engine.py
